Revert "Fixed issue where closing Dinner dropdown would result in whitespace at the bottom"
This reverts commit 2ffa0c55ca2b82935f5ff8dadfdcd9cd1d523c19.

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -238,12 +238,12 @@ body {
         transform: scaleY(1);
         opacity: 1;
         visibility: visible;
-        height: inherit;
+        max-height: inherit;
     }
     100% {
         transform: scaleY(0);
         opacity: 0;
-        height: inherit;
+        max-height: inherit;
         visibility: visible;
     }
 }
@@ -258,9 +258,8 @@ body {
     pointer-events: none;
     animation: animateDown-2 0.3s ease;
     visibility: hidden;
-    height: 0;
+    max-height: 0;
     opacity: 0;
-    overflow: hidden;
 }
 
 .menuItems {
